# vBRIEF

./: .gitattributes  .gitignore  CONTRIBUTING.md  GUIDE.md  README.md  Taskfile.yml  development-standards.md  pyproject.toml  vAgenda-extension-agentic-patterns.md  vAgenda-extension-api-go.md  vAgenda-extension-api-typescript.md  vAgenda-extension-beads.md  vAgenda-extension-claude.md  vAgenda-extension-model-first-reasoning.md  vAgenda-extension-playbooks.md  vAgenda-extension-security.md  vBRIEF-extension-api-go.md  vBRIEF-extension-api-python.md  vBRIEF-extension-api-typescript.md  vBRIEF-extension-common.md  vBRIEF-extension-playbooks.md  vContext-alternative-namespaced.md  vContext-extension-common.md  vbrief-spec-0.5.md  warp.vcontext.json  warp.vcontext.tron
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  (+2 more)
docs/: getting-started.md  vspec-conversion-guidelines.md
examples/: construction-project-gantt.vbrief.json  construction-project-gantt.vbrief.tron  prd.json  prd.vbrief.json  prd.vcontext.json  rfc854.vbrief.json  rfc854.vcontext.json  software-development-gantt.vbrief.json
history/: vBRIEF-extension-spec.md  vspec-conversion-guidelines.md  warp.md
libvbrief/: __init__.py  errors.py  io.py  issues.py  models.py  types.py  validation.py
schemas/: vagenda-core.schema.json  vbrief-core.schema.json  vbrief-extension-playbooks.schema.json  vcontext-core.schema.json
tests/: test_io_api.py  test_models_api.py  test_validation.py  test_validation_paths.py
validation/: vbrief_validator.py
(+34 files in other folders)
